fix alignment in firefox

--- a/core-bundle/assets/styles/jobs/menu.pcss
+++ b/core-bundle/assets/styles/jobs/menu.pcss
@@ -70,6 +70,8 @@
         }
 
         .jobs-progress {
+            display: flex;
+
             progress {
                 display: flex;
                 width: 100px;
